--- a/package.json
+++ b/package.json
@@ -22,6 +22,23 @@
   },
   "homepage": "https://github.com/monamijute/Monamijute",
   "dependencies": {
-    "body-parser": "^1.10.2"
+    "body-parser": "^1.10.2",
+    "bower": "^1.3.12",
+    "coffee-script": "^1.8.0",
+    "compression": "^1.3.0",
+    "connect": "^3.3.4",
+    "connect-assets": "^4.4.0",
+    "connect-flash": "^0.1.1",
+    "cookie-session": "^1.1.0",
+    "csurf": "^1.6.5",
+    "express": "^4.11.1",
+    "iced-coffee-script": "^1.8.0-c",
+    "jade": "^1.9.1",
+    "mailgun-js": "^0.6.8",
+    "moment": "^2.9.0",
+    "morgan": "^1.5.1",
+    "nodetime": "^0.8.15",
+    "stylus": "^0.49.3",
+    "underscore": "^1.7.0"
   }
 }
