--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.iced",
   "scripts": {
     "start": "iced app.iced",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node_modules/.bin/bower install --allow-root"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
